Fix layout for overflowing content

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -60,6 +60,8 @@
     margin: 0 auto;
 
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     list-style-type: none;
     font-family: "Poppins", "Verdana", sans-serif;
     font-weight: 500;
